Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30146

Regression: windowsvista style draws checkable items wrong

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.1.0
    • 5.0.1
    • GUI: Look'n'Feel
    • None
    • Windows 7
    • qtbase/stable: c6bca8da0a81a223825778b1d9b0af27866533e5

    Description

      Selectable QTableWidgetItems are not drawn correctly when scrolling the table widget. The attached example shows this. The items from 0 to 10 are initially unchecked and items from 11 to 20 are checked. When scrolling the table some of the unchecked items become checked and vice versa.

      This is only reproducible with windowsvista style. With, for example, windowsxp style the items are drawn correctly.

      This worked correctly with Qt 4.8.4.

      Attachments

        1. qt-bug.zip
          2 kB
        2. qtbug30146_4_diag.patch
          5 kB
        3. qtbug30146_5_diag.patch
          10 kB
        4. qtbug30146.tar
          10 kB
        For Gerrit Dashboard: QTBUG-30146
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes