src/widgets/itemviews/qitemdelegate.cpp
@@ -6790,6 +6790,13 @@ name|value
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// disable style animations for checkboxes etc. within itemviews (QTBUG-30146)
+name|opt
+operator|.
+name|styleObject
+operator|=
+literal|0
+expr_stmt|;
 return|return
 name|opt
 return|;
